--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,153 @@
-# Ignore node_modules
+# ==============================================================================
+# MATTYTR.DEV PORTFOLIO - GITIGNORE
+# ==============================================================================
+
+# ==============================================================================
+# NODE.JS & NPM
+# ==============================================================================
 node_modules/
-# Ignore log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-# Ignore environment files
+package-lock.json
+yarn.lock
+
+# ==============================================================================
+# ENVIRONMENT & CONFIG
+# ==============================================================================
 .env
 .env.*
-# Ignore OS files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# ==============================================================================
+# OPERATING SYSTEM
+# ==============================================================================
+# macOS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+
+# Windows
 Thumbs.db
-# Ignore package lock file
-package-lock.json
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# ==============================================================================
+# EDITORS & IDES
+# ==============================================================================
+# Visual Studio Code
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# JetBrains IDEs
+.idea/
+*.iws
+*.iml
+*.ipr
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+*~
+*.swp
+*.swo
+.netrwhist
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# ==============================================================================
+# BUILD & DISTRIBUTION
+# ==============================================================================
+/dist/
+/build/
+/out/
+/.next/
+/.nuxt/
+/.vuepress/dist/
+
+# ==============================================================================
+# LOGS & CACHE
+# ==============================================================================
+logs/
+*.log
+.cache/
+.parcel-cache/
+.vite/
+
+# ==============================================================================
+# TESTING
+# ==============================================================================
+coverage/
+.nyc_output/
+.coverage
+htmlcov/
+
+# ==============================================================================
+# TEMPORARY FILES
+# ==============================================================================
+*.tmp
+*.temp
+.tmp/
+.temp/
+
+# ==============================================================================
+# LEGACY FILES (TO BE REMOVED)
+# ==============================================================================
+css/styles.css
+js/script-clean.js
+docs/
+
+# ==============================================================================
+# SENSITIVE DATA
+# ==============================================================================
+*.key
+*.pem
+*.p12
+*.p8
+*.cer
+*.crt
+*.der
+
+# ==============================================================================
+# BACKUP FILES
+# ==============================================================================
+*.backup
+*.bak
+*.swp
+*.orig
