Update asset paths in vercel.json and remove package.json
Changed asset source paths in vercel.json from /css/ to /styles/css/ and /js/ to /scripts/. Removed package.json, indicating a move away from Node.js tooling or static site configuration.

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "/css/(.*)",
+      "source": "/styles/css/(.*)",
       "headers": [
         {
           "key": "Content-Type",
@@ -14,7 +14,7 @@
       ]
     },
     {
-      "source": "/js/(.*)",
+      "source": "/scripts/(.*)", 
       "headers": [
         {
           "key": "Content-Type",
